--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,5 +63,17 @@
             android:layout_height="wrap_content"
             android:onClick="test8"
             android:text="带header的网格排序+删除" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="test9"
+            android:text="非线性排列的列表排序+删除" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="test10"
+            android:text="非线性排列的网格排序+删除" />
     </LinearLayout>
 </ScrollView>
